--- a/inner/register.html
+++ b/inner/register.html
@@ -204,7 +204,7 @@
 
     <div id="page" class="site  is-header-top-main">
 
-        <header id="header" class="header-sections is-header-sticky">
+        <header id="header" class="header-sections ">
 
             <div class="header-top">
                 <div class="container">
